[package]
name = "pinocchio-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.10.2"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-address = {version = "2.2.0", features = ["curve25519"]}
solana-program-log = "1.1.0"

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = { version = "0.10.1", default-features = false, features = ["token", "associated-token"] }
solana-account = "3.2.0"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-program-option = "3.0"
solana-program-pack = "3.0"
solana-pubkey = "4.0"
solana-sdk-ids = "3.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
